# jibble-export

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: manual-report.yml  monthly-report.yml  release.yml
reports/: attendance_report_2026-01-24_2026-02-24.xlsx  latest.json
src/jibble_export/: __init__.py  client.py  formatter.py  settings.py  utils.py
src/jibble_export/cli/: entrypoint.py
src/jibble_export/features/: attendance.py  clocking.py  holidays.py  reports.py  timeoffs.py
src/jibble_export/models/: duration.py  responses.py
