[project]
name = "jibble-export"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sayandip Dutta", email = "sayandip199309@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.1",
    "ty>=0.0.18",
]

[project.scripts]
jibble = "jibble_export.cli.entrypoint:main"
